--- a/package.json
+++ b/package.json
@@ -10,21 +10,35 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@rollup/plugin-inject": "^5.0.3",
+    "@tweenjs/tween.js": "^19.0.0",
+    "@types/dat.gui": "^0.7.9",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "dat.gui": "^0.7.9",
+    "element-plus": "^2.3.0",
+    "exif-js": "^2.3.0",
+    "process": "^0.11.10",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/exif": "^0.6.3",
     "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "element-plus": "^2.3.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.4",
+    "three": "^0.150.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.24"
   }
 }
